tests/baselines/reference/identifierStartAfterNumericLiteral.errors.txt
tests/cases/compiler/identifierStartAfterNumericLiteral.ts(1,16): error TS1351: An identifier cannot follow a numeric literal.
tests/cases/compiler/identifierStartAfterNumericLiteral.ts(3,2): error TS1351: An identifier cannot follow a numeric literal.
tests/cases/compiler/identifierStartAfterNumericLiteral.ts(3,2): error TS2304: Cannot find name 'a'.
tests/cases/compiler/identifierStartAfterNumericLiteral.ts(4,3): error TS1124: Digit expected.
tests/cases/compiler/identifierStartAfterNumericLiteral.ts(4,4): error TS2538: Type 'null' cannot be used as an index type.
tests/cases/compiler/identifierStartAfterNumericLiteral.ts(5,2): error TS1351: An identifier cannot follow a numeric literal.
tests/cases/compiler/identifierStartAfterNumericLiteral.ts(6,3): error TS1124: Digit expected.
tests/cases/compiler/identifierStartAfterNumericLiteral.ts(6,3): error TS2304: Cannot find name 'n'.
tests/cases/compiler/identifierStartAfterNumericLiteral.ts(7,2): error TS1351: An identifier cannot follow a numeric literal.
tests/cases/compiler/identifierStartAfterNumericLiteral.ts(7,2): error TS2304: Cannot find name 'a'.
tests/cases/compiler/identifierStartAfterNumericLiteral.ts(8,3): error TS1124: Digit expected.
tests/cases/compiler/identifierStartAfterNumericLiteral.ts(10,3): error TS1124: Digit expected.
tests/cases/compiler/identifierStartAfterNumericLiteral.ts(10,3): error TS2304: Cannot find name 'e'.
tests/cases/compiler/identifierStartAfterNumericLiteral.ts(12,3): error TS1005: ';' expected.
tests/cases/compiler/identifierStartAfterNumericLiteral.ts(13,3): error TS1351: An identifier cannot follow a numeric literal.
tests/cases/compiler/identifierStartAfterNumericLiteral.ts(13,3): error TS2304: Cannot find name 'a'.


==== tests/cases/compiler/identifierStartAfterNumericLiteral.ts (16 errors) ====
    let valueIn = 3in[null];
                   ~
!!! error TS1351: An identifier cannot follow a numeric literal.
    
    3a[null]
     ~
!!! error TS1351: An identifier cannot follow a numeric literal.
     ~
!!! error TS2304: Cannot find name 'a'.
    3e[null]
      
!!! error TS1124: Digit expected.
       ~~~~
!!! error TS2538: Type 'null' cannot be used as an index type.
    3in[null]
     ~
!!! error TS1351: An identifier cannot follow a numeric literal.
    3en[null]
      
!!! error TS1124: Digit expected.
      ~
!!! error TS2304: Cannot find name 'n'.
    1a
     ~
!!! error TS1351: An identifier cannot follow a numeric literal.
     ~
!!! error TS2304: Cannot find name 'a'.
    1e
      
!!! error TS1124: Digit expected.
    1e9
    1ee
      
!!! error TS1124: Digit expected.
      ~
!!! error TS2304: Cannot find name 'e'.
    1n
    2n2
      ~
!!! error TS1005: ';' expected.
    2na
      ~
!!! error TS1351: An identifier cannot follow a numeric literal.
      ~
!!! error TS2304: Cannot find name 'a'.
    